force-app/main/default/objects/ExpOMTest__c/ExpOMTest__c.object-meta.xml
<CustomObject>
    <description>ExP OM: Do not delete or modify -- used by outcome manager unit tests</description>
    <label>ExpOMTest</label>
    <nameField>
        <displayFormat>OMTest-{0000}</displayFormat>
        <label>ExpOMTest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExpOMTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>