force-app/main/default/objects/ExpOMTest__c/fields/Athletic_Skills__c.field-meta.xml
<CustomField>
    <fullName>Athletic_Skills__c</fullName>
    <label>Athletic Skills</label>
    <length>80</length>
    <type>Text</type>
</CustomField>