force-app/main/default/objects/ExpOMTest__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>ExpOMTests</relationshipLabel>
    <relationshipName>ExpOMTests</relationshipName>
    <type>Lookup</type>
</CustomField>