force-app/main/default/objects/ExpOMTest__c/fields/EcmIsLocked__c.field-meta.xml
<CustomField>
    <fullName>EcmIsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows us to lock the object.</description>
    <inlineHelpText>Allows us to lock the object.</inlineHelpText>
    <label>EcmIsLocked</label>
    <type>Checkbox</type>
</CustomField>