force-app/main/default/objects/ExpOMTest__c/fields/ExpOMTest2__c.field-meta.xml
<CustomField>
    <fullName>ExpOMTest2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ExpOMTest2</label>
    <referenceTo>ExpOMTest2__c</referenceTo>
    <relationshipLabel>ExpOMTests</relationshipLabel>
    <relationshipName>ExpOMTests</relationshipName>
    <type>Lookup</type>
</CustomField>