force-app/main/default/objects/ExpOMTest__c/fields/ExpOMTest_Date__c.field-meta.xml
<CustomField>
    <fullName>ExpOMTest_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>ExpOMTest Date</label>
    <type>Date</type>
</CustomField>