force-app/main/default/objects/ExpOMTest__c/fields/Language_Skills__c.field-meta.xml
<CustomField>
    <fullName>Language_Skills__c</fullName>
    <label>Language Skills</label>
    <length>80</length>
    <type>Text</type>
</CustomField>