force-app/main/default/objects/ExpOMTest__c/fields/Math_Skills__c.field-meta.xml
<CustomField>
    <fullName>Math_Skills__c</fullName>
    <label>Math Skills</label>
    <length>80</length>
    <type>Text</type>
</CustomField>