force-app/main/default/objects/ExpOMTest__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Service Plan</label>
    <referenceTo>Treatment_Plan__c</referenceTo>
    <relationshipLabel>ExpOMTests</relationshipLabel>
    <relationshipName>ExpOMTests</relationshipName>
    <type>Lookup</type>
</CustomField>