force-app/main/default/objects/ExpOMTest__c/fields/Social_Skills__c.field-meta.xml
<CustomField>
    <fullName>Social_Skills__c</fullName>
    <label>Social Skills</label>
    <length>80</length>
    <type>Text</type>
</CustomField>